tests/invalidTest/other/var_no_declared.q
# EXPECT the variable has not been declared
def void errorTest(){
    sint64 b = a
}